kubernetes/producao/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fiap-vehicle-core-deployment
  labels:
    app: fiap-vehicle-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fiap-vehicle-core
  template:
    metadata:
      labels:
        app: fiap-vehicle-core
    spec:
      containers:
        - name: fiap-vehicle-core
          image: 841162698708.dkr.ecr.us-east-1.amazonaws.com/ms-vehicle-core-service:${GITHUB_SHA}
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
