kubernetes/producao/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fiap-vehicle-core-service
spec:
  selector:
    app: fiap-vehicle-core
  type: LoadBalancer  # Para expor o serviço externamente
  ports:
    - protocol: TCP
      port: 80           # Porta acessível externamente
      targetPort: 8080    # Porta usada pelo container
