kubernetes/producao/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fiap-vehicle-core-ingress
spec:
  rules:
    - host: fiap-vehicle-core.example.com  # Substitua pelo domínio desejado
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fiap-vehicle-core-service
                port:
                  number: 80
